[package]
name = "fast_features"
version = "0.1.0"
authors = ["Emre Ates <ates@bu.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = { version = "0.8.4", features = ["extension-module"] }
numpy = "0.7.0"
ndarray = "0.13"
quantiles = "0.7.1"
average = "0.10.3"

[lib]
name = "fast_features"
crate-type = ["cdylib"]
